# multi_robot_stage

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: move_base.launch  move_base.launch~  multi_robot.launch  multi_robot.launch~  navigation.launch  robot_model.launch  robot_model.launch~  turtlebot_in_stage.launch~  view_navigation.launch  view_navigation.launch~
launch/includes/: amcl_multirobot.launch.xml  move_base.xml  move_base_multirobot.launch.xml  move_base_multirobot_collvoid.launch.xml
maps/stage/: three_rooms.world~  turtlebot.inc~  turtlebot_intruder.inc~
params/: collvoid_config.yaml  params_turtle.yaml  robot_goals.yaml
rviz/: multi_robot_navigation.rviz  multi_robot_navigation.rviz~  multi_robot_navigation_bak.rviz  navigation.rviz  navigation.rviz~
